# computergraphik

aufgabe5/: assignment5.docx
aufgabe_4/code/: CMakeLists.txt  main.cpp  pointlight.h  scene.h  sceneobject.cpp  sceneobject.h  util.h  vec3.h
aufgaben_batt_8/: vert_tree_imposter.glsl
aufgaben_batt_8/code/: CMakeLists.txt
aufgaben_batt_8/code/include/: core.hpp
aufgaben_batt_8/code/libs/: libs.cmake
aufgaben_batt_8/code/libs/glad/include/glad/: gl.h
aufgaben_batt_8/code/libs/glad/src/: gl.c
aufgaben_batt_8/code/libs/lodepng/src/: lodepng.cpp
aufgaben_batt_8/code/shaders/: frag.glsl  frag_tree_imposter.glsl  vert_ground.glsl  vert_trees.glsl
aufgaben_batt_8/code/src/: core.cpp  main.cpp
aufgaben_blatt_01/: CMakeLists.txt
aufgaben_blatt_01/aufgabe_1/code/: 01_simple_functions.cpp
aufgaben_blatt_01/aufgabe_2/code/: 01_stl.cpp  LineStrip3D.cpp  LineStrip3D.hpp  Point3D.hpp
aufgaben_blatt_01/aufgabe_3/code/: 01_raii.cpp  MatrixInt.cpp
aufgaben_blatt_01/aufgabe_4/code/: 01_functions.cpp  Definition.hpp
aufgaben_blatt_02_/: readme.txt
aufgaben_blatt_02_/code/: CMakeLists.txt  ColorSpaces.cpp  ColorSpaces.hpp  Image.hpp  ImageBase.cpp  ImageBase.hpp  ImageConverter.cpp  ImageConverter.hpp  ImageIO.cpp  ImageIO.hpp  ImageManipulation.cpp  ImageManipulation.hpp  ImageTraits.hpp
aufgaben_blatt_3/: Analytical Geometry.docx
aufgaben_blatt_3/code/: CMakeLists.txt  main.cpp  scene.h  sceneobject.cpp  sceneobject.h  util.h  vec3.h
aufgaben_blatt_7/: Readme.md  Readme.txt
aufgaben_blatt_7/code/: CMakeLists.txt  Image.h  ImageBase.cpp  ImageBase.h  ImageConverter.cpp  ImageConverter.h  ImageFilter.cpp  ImageFilter.h  ImageIO.cpp  ImageIO.h  ImageTraits.h  ImageViewer.cpp  ImageViewer.h  main.cpp
aufgaben_blatt_7/code/bilder/: ginkgo_edge.ppm
aufgaben_blatt_7/code/glad/include/glad/: glad.h
aufgaben_blatt_7/code/glad/src/: glad.c
aufgaben_blatt_7/code/glowl/: GLSLProgram.cpp  GLSLProgram.hpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp
aufgaben_blatt_7/code/imgui/: imconfig.h  imgui_impl_opengl3.cpp
aufgaben_blatt_7/code/shader/: display_texture_f.glsl  display_texture_v.glsl  display_texture_v_downgrade.glsl  seperated_gaussian_c.glsl
